content: add descriptions

--- a/content/projects/l2.md
+++ b/content/projects/l2.md
@@ -3,6 +3,10 @@ title = "Layer 2"
 date = "2022-02-14"
 contributors = ["~rilfun-lidlen", "~datnut-pollen", "~datder-sonnet", "~norsyr-torryn", "~wicdev-wisryt"]
 status = "Completed"
+description = """
+Due to gas prices on the Ethereum blockchain, a layer 2 solution was developed
+to rollup transactions on the Urbit network.
+"""
 +++
 
 When [Azimuth](https://urbit.org/docs/azimuth/azimuth) (Urbit's PKI) was first
