--- a/content/updates/2023-02-11.md
+++ b/content/updates/2023-02-11.md
@@ -24,12 +24,12 @@ Core dev hit the ground running in January by performing weekly releases of the 
 
 Another change `~wolref-podlex` and I have made to the core dev process is to have daily "PR Blitz" meetings to make sure issues and PRs are making progress.  These meetings take place in gathertown too, so the community can listen in and help out.  Last week we merged 19 PRs, which I believe is a new record.
 
-I'm excited about `~mastyr-bottec`'s [event log truncation](https://roadmap.urbit.org/project/event-log-truncation) work, which has now been merged into the `develop` branch and is slated for Tuesday release.  `~littel-wolfur` has a 500GB event log, which can now be deleted.  This is one of a few features that have been planned since the beginning of the Urbit project but hadn't been built.  For now it's still manual.  Later work [Mars/Urth Split TODO]() will implement it in a more robust manner using the [Epoch System TODO]().  But it works, so users and hosting providers aren't left without recourse as their Urbits eat up their hard drives.
+I'm excited about `~mastyr-bottec`'s [event log truncation](/project/event-log-truncation) work, which has now been merged into the `develop` branch and is slated for Tuesday release.  `~littel-wolfur` has a 500GB event log, which can now be deleted.  This is one of a few features that have been planned since the beginning of the Urbit project but hadn't been built.  For now it's still manual.  Later work [Mars/Urth Split](/project/mars-urth) will implement it in a more robust manner using the [Epoch System](/project/epoch-system).  But it works, so users and hosting providers aren't left without recourse as their Urbits eat up their hard drives.
 
-I'm also excited about [tuning Ames `%clog` constants](https://roadmap.urbit.org/project/tune-clog), which is now being tested on infrastructure ships and will likely be released a week from Tuesday.  We'll see how much of a difference it will make, but it has the potential to break resubscribe loops for ships publishing popular apps or chat channels.
+I'm also excited about [tuning Ames `%clog` constants](/project/tune-clog), which is now being tested on infrastructure ships and will likely be released a week from Tuesday.  We'll see how much of a difference it will make, but it has the potential to break resubscribe loops for ships publishing popular apps or chat channels.
 
 These resubscribe loops come from the kernel being overly skittish about memory use on publisher ships and too quick to kick a subscriber in case of a momentary slowdown.  Each subscriber then sends a new request to resubscribe.  These extra resubscribe requests cause extra load on the publisher, making further momentary slowdowns more likely, causing further resubscribes, until the system works itself into a frenzy of everybody resubscribing all the time unnecessarily.  We don't know exactly what percentage of publisher load comes from this, but it's certainly not helping.  
 
 [This pull request](https://github.com/urbit/urbit/pull/5827) adds a better measurement for memory use.  This should advance the Pareto frontier of the tradeoff between memory use and resubscription load.
 
-Note that Ames's `%clog` system, whose constants are being tuned here, should itself be obviated by an upcoming subscription system based on [Remote Scry]() for networking and [Solid-State Subscriptions]() for an application model.  On that front, [`~wicrum-wicrun`'s solid-state subscription library](https://github.com/urbit/urbit/pull/6269) is now in good shape and ready to be pounded on by userspace devs; documentation coming soon.
+Note that Ames's `%clog` system, whose constants are being tuned here, should itself be obviated by an upcoming subscription system based on [Remote Scry](/project/remote-scry) for networking and [Solid-State Subscriptions](/project/solid-state-publications) for an application model.  On that front, [`~wicrum-wicrun`'s solid-state subscription library](https://github.com/urbit/urbit/pull/6269) is now in good shape and ready to be pounded on by userspace devs; documentation coming soon.
