weekly update: typo

--- a/content/updates/2023-02-11.md
+++ b/content/updates/2023-02-11.md
@@ -9,7 +9,7 @@ ship = "~rovnys-ricfer"
 
 Big couple weeks, apologies for being late with this update!
 
-Core dev hit the ground running in January by performing weekly releases of the Urbit OS.  Starting two weeks ago, the Urbit Foundation took over this weekly release process.  Many thanks to `~dovsem-bornyl` and `~wicdev-wisryt` for training us in the procedures they developed at Tlon.  `~wolref-podlex` and I will continue the work they've been doing to tweak the process to make it more more organized, more streamlined, more inclusive of the community, and less error-prone.
+Core dev hit the ground running in January by performing weekly releases of the Urbit OS.  Starting two weeks ago, the Urbit Foundation took over this weekly release process.  Many thanks to `~dovsem-bornyl` and `~wicdev-wisryt` for training us in the procedures they developed at Tlon.  `~wolref-podlex` and I will continue the work they've been doing to tweak the process to make it more organized, more streamlined, more inclusive of the community, and less error-prone.
 
 [`~wicdev-wisryt`'s thread about releases](https://twitter.com/pcmonk/status/1624165311745503233) does a good job summarizing the progress we've made.  I would add to it that we wouldn't be able to do this now without `~wicdev-wisryt`'s [Upgrade Overhaul](https://roadmap.urbit.org/project/agents-in-clay) project, released at the end of 2022, which fixed deep issues in Arvo's upgrade system that made upgrades unreliable.
 
