update: clean up truncation paragraph

--- a/content/updates/2023-02-11.md
+++ b/content/updates/2023-02-11.md
@@ -24,7 +24,7 @@ Core dev hit the ground running in January by performing weekly releases of the 
 
 Another change `~wolref-podlex` and I have made to the core dev process is to have daily "PR Blitz" meetings to make sure issues and PRs are making progress.  These meetings take place in gathertown too, so the community can listen in and help out.  Last week we merged 19 PRs, which I believe is a new record.
 
-I'm excited about `~mastyr-bottec`'s [event log truncation](/project/event-log-truncation) work, which has now been merged into the `develop` branch and is slated for Tuesday release.  `~littel-wolfur` has a 500GB event log, which can now be deleted.  This is one of a few features that have been planned since the beginning of the Urbit project but hadn't been built.  For now it's still manual.  Future work, as part of the [Mars/Urth Split](/project/mars-urth), will implement it in a more robust manner using the [Epoch System](/project/epoch-system).  But it works, so users and hosting providers aren't left without recourse as their Urbits eat up their hard drives.
+I'm excited about `~mastyr-bottec`'s [event log truncation](/project/event-log-truncation) work, which has now been merged into the `develop` branch and is slated for Tuesday release.  This is one of a few features that have been planned since the beginning of the Urbit project but hadn't been built.  Without it, event logs get pretty big: for instance, `~littel-wolfur` has a 500GB event log, which can now be deleted.  For now the truncation operation (called "chop") is still manual.  Future work, as part of the [Mars/Urth Split](/project/mars-urth), will implement it in a more robust manner using the [Epoch System](/project/epoch-system), facilitating running it automatically.  But this version works now, so users and hosting providers aren't left without recourse as their Urbits eat up their hard drives.
 
 I'm also excited about [tuning Ames `%clog` constants](/project/tune-clog), which is now being tested on infrastructure ships and will likely be released a week from Tuesday.  We'll see how much of a difference it will make, but it has the potential to break resubscribe loops for ships publishing popular apps or chat channels.
 
