updates: link to pointer compression PR

--- a/content/updates/2023-02-19.md
+++ b/content/updates/2023-02-19.md
@@ -15,7 +15,7 @@ On Friday we merged 9 PRs.  It feels good to be building up speed in this way.  
 
 `~dachus-tiprel` and other community members have been looking into [an issue that causes Urbit's HTTP clients to fail to reconnect](https://github.com/urbit/urbit/issues/6311).  They've now narrowed it down to a client-side issue, likely due to improper error handling.  It's good to be making progress on this bug, since it has impacts user experience directly.  It's also nice to see the community work together to address the issue.  As Linus Torvalds says, with enough eyes, all bugs are shallow.
 
-`~barter-simsum`'s pointer compression work, which increases Urbit's storage capacity to 8GB, is now working.  We will review it in more detail this week, with plans to merge it the next week and deploy it one week after that.
+`~barter-simsum`'s [pointer compression work](https://github.com/urbit/vere/pull/164), which increases Urbit's storage capacity to 8GB, is now working.  We will review it in more detail this week, with plans to merge it the next week and deploy it one week after that.
 
 There's been increasing activity on the New Mars project lately.  See, for instance, [`~wicdev-wisryt`'s branch where he's been adding jets to the new interpreter](https://github.com/urbit/new-mars/tree/philip/jets).
 
