update: clean up link

--- a/content/updates/2023-02-24.md
+++ b/content/updates/2023-02-24.md
@@ -20,6 +20,6 @@ Here are some links to discussions, proposals, and code:
 - [Later Non-WebSockets Proposal](https://dachus-tiprel.tlon.network/proposal/eyre-fix)  (`~dachus-tiprel` has since revised this further, building the same paradigm but in userspace, without changing Eyre)
 - [New Diagnostic Tooling](https://github.com/tloncorp/eyrie)
 
-`~mopfel-winrux` began work on a way for Urbit to control arbitrary hardware devices: [https://urbit.amadeobellotti.com/proposal/loch/loch-proposal].  This is exciting work that will enable internet-of-things applications and integrations with other devices, such as hardware crypto wallets.
+`~mopfel-winrux` began work on [a way for Urbit to control arbitrary hardware devices](https://urbit.amadeobellotti.com/proposal/loch/loch-proposal).  This is exciting work that will enable internet-of-things applications and integrations with other devices, such as hardware crypto wallets.
 
 `~watter-parter` began work on the runtime half of [a system that will allow Urbit to serve static webpages from a runtime cache](https://urbit.org/grants/eyre-scry), without running Nock or doing disk writes.  This will be an important scaling improvement for apps that serve content to the old web, such as `%studio`, `%blog`, along with any frontend-only app, such as `%uniswap`.
