--- a/content/updates/2023-02-19.md
+++ b/content/updates/2023-02-19.md
@@ -1,7 +1,7 @@
 +++
 title = "Weekly Update"
 date = "2023-02-19"
-description = ""
+description = "Solid-State Subscriptions released, lots of PRs merged"
 [extra]
 author = "Ted Blackman"
 ship = "~rovnys-ricfer"
