--- a/content/updates/2022-12-09.md
+++ b/content/updates/2022-12-09.md
@@ -1,18 +1,18 @@
 +++
 title = "Weekly Update"
 date = "2022-12-09"
-description = "New Mars, Solid-State Subscriptions, Kelvin Shims, Ames Improvements, and More."
+description = "Ares, Solid-State Subscriptions, Kelvin Shims, Ames Improvements, and More."
 [extra]
 author = "Ted Blackman"
 ship = "~rovnys-ricfer"
 +++
 
 
-## New Mars
+## Ares
 
-This week I had the rare treat of getting to [write some Hoon](https://github.com/urbit/new-mars/commit/638b761e93c41580f535009a766c0c3e2332344d).  It was a double treat, because I was pair-programming with `~ritpub-sipsyl` on [New Mars](https://roadmap.urbit.org/project/new-mars), the experimental rewrite of the Nock interpreter.  Sometime soon I'd like to write up a guide to learning about New Mars, but I needed to learn more about it myself first.  I'll take a stab at a brief explanation here.
+This week I had the rare treat of getting to [write some Hoon](https://github.com/urbit/new-mars/commit/638b761e93c41580f535009a766c0c3e2332344d).  It was a double treat, because I was pair-programming with `~ritpub-sipsyl` on [Ares](https://roadmap.urbit.org/project/new-mars), the experimental rewrite of the Nock interpreter.  Sometime soon I'd like to write up a guide to learning about Ares, but I needed to learn more about it myself first.  I'll take a stab at a brief explanation here.
 
-The code is very much under active development, so it could change shape, but for now, New Mars has the following components:
+The code is very much under active development, so it could change shape, but for now, Ares has the following components:
 - the "2stackz" noun allocator (with separate heap)
 - snapshot system
 - compiler from Nock to machine code
@@ -23,7 +23,7 @@ The code is very much under active development, so it could change shape, but fo
 
 The allocator uses two stacks that grow toward each other, to achieve a hybrid between refcounting and garbage collection.  It does a small copying collection from one stack to the other at each return from a stack frame.  This has GC's asymptotic advantage over refcounting (it only needs to modify data that's returned, instead of all data that gets freed, which for Urbit includes a lot of garbage cons-cells), but retains the determinism of refcounting, which is important for ensuring predictable performance.  There will also be a supplementary heap, to prevent large values from being copied excessively.
 
-The New Mars snapshot design [(latest)](https://github.com/urbit/new-mars/blob/master/docs/persistence.md) [(original grant proposal)](https://urbit.org/grants/persistent-memory) uses a clever copy-on-write scheme to minimize disk write amplification when dirtying a page of memory in the noun allocator, which becomes especially important as the amount of data stored in Urbit begins to exceed the amount of RAM on typical machines.  This snapshot system is being written in such a way that current Vere and New Mars will both be able to use it.  `~finmep-lanteb` just started work on this recently.
+[Omitted long matching line]
 
 Subject knowledge analysis is a novel static analysis technique devised by `~ritpub-sipsyl` that infers the tree shape of the Nock "subject" (the environment -- everything that's in scope, including code and data) at each stage of a complex Nock operation.  This information can be used to elide memory allocations for intermediate products by putting them in registers instead, especially when combined with linearization.
 
