--- a/content/updates/2023-02-19.md
+++ b/content/updates/2023-02-19.md
@@ -17,6 +17,6 @@ On Friday we merged 9 PRs.  It feels good to be building up speed in this way.  
 
 `~barter-simsum`'s [pointer compression work](https://github.com/urbit/vere/pull/164), which increases Urbit's storage capacity to 8GB, is now working.  We will review it in more detail this week, with plans to merge it the next week and deploy it one week after that.
 
-There's been increasing activity on the New Mars project lately.  See, for instance, [`~wicdev-wisryt`'s branch where he's been adding jets to the new interpreter](https://github.com/urbit/new-mars/tree/philip/jets).
+There's been increasing activity on the Ares project lately.  See, for instance, [`~wicdev-wisryt`'s branch where he's been adding jets to the new interpreter](https://github.com/urbit/new-mars/tree/philip/jets).
 
 Finally, I unearthed an old document describing the steps involved in the [libames project](https://gist.github.com/belisarius222/a05fb9b688dada102be9020bb9b429d1).  This would allow phones and embedded devices to speak Urbit's "Ames" peer-to-peer protocol, without needing to run a full Urbit node on the client.  Since these clients currently communicate with their Urbit over HTTP, a user a user needs to take a bunch of rather technical actions to access their ship from their phone: buy a domain, set up a relay system using TailScale or NativePlanet's StarTram, and configure SSL termination.  None of these activities sparks joy.  
